# CursorGuard

./: Cargo.toml  README.md  auto_install.sh  install.sh  uninstall.sh
src/: common.rs  grep.rs  head.rs  tail.rs
